fix: fix the height of the container with tasks when opening the edit area on mobile devices

--- a/styles/taskEdit.module.scss
+++ b/styles/taskEdit.module.scss
@@ -435,7 +435,7 @@
   .wrapper {
     width: 100%;
     height: auto;
-    padding: 23px 17px 65px 17px;
+    padding: 23px 17px 75px 17px;
   }
 
   .inputsWrapper {
@@ -495,10 +495,12 @@
     margin-right: 0;
     padding: 10px 0px 13px 20px;
     width: 100%;
+    margin-bottom: 0;
   }
 
   .description.opened,
   .descriptionFilled.opened {
+    margin-bottom: 0;
     height: calc(100vh - 215px);
     padding: 11px 0px 23px 20px;
     textarea {
